# tools

./: Cargo.toml  README.md  install.ps1  install.sh
.github/bundle/: GETTING-STARTED.txt
.github/workflows/: ci.yml  release.yml
crates/crawl-cli/: Cargo.toml
crates/crawl-cli/src/: cli.rs  exit_codes.rs  main.rs
crates/crawl-cli/src/commands/: config.rs  export.rs  fetch.rs  find.rs  info.rs  init.rs  ls.rs  mod.rs  prune.rs  rm.rs  run.rs  source.rs  status.rs
crates/crawl-cli/src/output/: mod.rs
crates/crawl-core/: Cargo.toml
crates/crawl-core/src/: error.rs  info.rs  lib.rs  source.rs  status.rs  vault.rs
crates/crawl-core/src/config/: keys.rs  mod.rs
crates/crawl-core/src/crawl/: fetch.rs  local.rs  mod.rs  run.rs  sharepoint.rs  smb.rs
crates/crawl-core/src/db/: migrations.rs  mod.rs
crates/crawl-core/src/db/migrations/: 001_initial.sql
crates/crawl-core/src/registry/: mod.rs  prune.rs  rm.rs  sources.rs
crates/crawl-core/tests/: lifecycle.rs  sharepoint_all_sites.rs  sharepoint_cookie.rs  sharepoint_fetch.rs  sharepoint_mock.rs  sharepoint_site_structure.rs  strategies.rs
crates/distill/: Cargo.toml
crates/distill/src/: build.rs  extract.rs  main.rs
crates/distill/src/sources/: local.rs  mod.rs  sharepoint.rs
crates/distill/tests/: e2e.rs
crates/extract-core/src/: lib.rs  pandoc.rs  pdf.rs  tool.rs
crates/kb-core/: Cargo.toml
crates/kb-core/src/: chunk.rs  config.rs  embed.rs  error.rs  index.rs  lib.rs  locator.rs
crates/md-cli/: Cargo.toml
crates/md-cli/src/: cli.rs  exit_codes.rs  main.rs
crates/md-cli/src/commands/: add.rs  config.rs  convert.rs  info.rs  init.rs  ls.rs  mod.rs  prune.rs  rm.rs  show.rs  status.rs  whence.rs
crates/md-cli/src/output/: mod.rs
crates/md-core/: Cargo.toml
crates/md-core/src/: annotation.rs  error.rs  info.rs  lib.rs  status.rs  vault.rs  whence.rs
crates/md-core/src/config/: keys.rs  mod.rs
crates/md-core/src/convert/: mod.rs  pipeline.rs  reconcile.rs
crates/md-core/src/db/: migrations.rs
crates/md-core/src/db/migrations/: 001_initial.sql
crates/md-core/src/registry/: add.rs  mod.rs  prune.rs  rm.rs
crates/md-core/tests/: concurrency.rs  config_validation.rs  lifecycle.rs  prune.rs  status_transitions.rs  whence_test.rs
crates/rag-cli/: Cargo.toml
crates/rag-cli/src/: main.rs
crates/rag-core/: Cargo.toml
crates/rag-core/src/config/: keys.rs  mod.rs
crates/rag-core/src/embed/: candle.rs
crates/rag-core/src/index/: mod.rs  reconcile.rs
crates/rag-core/tests/: parallel_vs_sequential.rs
crates/recall/: Cargo.toml
crates/recall/src/: backend.rs  main.rs  mcp.rs  server.rs
crates/vault-core/src/: ignore.rs  migrations.rs
docs/crawl/: README.md
docs/crawl/adr/: 0001-reuse-toolkit-foundation.md  0002-sources-and-documents.md  0003-pluggable-strategies.md  0004-sharepoint-via-graph.md  0005-sharepoint-auth-and-rest.md
docs/knowledge/: README.md
