[package]
name = "crawl-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "crawl"
path = "src/main.rs"

[dependencies]
crawl-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
