[package]
name = "distill"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "distill"
path = "src/main.rs"

[dependencies]
kb-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
sha2.workspace = true
walkdir.workspace = true
ignore.workspace = true
which.workspace = true
ureq.workspace = true
pdf-extract.workspace = true
zip.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
tiny_http.workspace = true
serde_json.workspace = true
