[package]
name = "kb-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
sha2.workspace = true
rusqlite.workspace = true
sqlite-vec.workspace = true
ureq.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
