[package]
name = "md-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
vault-core.workspace = true
extract-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
walkdir.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3.10"
