[package]
name = "rag-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "rag"
path = "src/main.rs"

[features]
default = []
metal = ["rag-core/metal"]
cuda = ["rag-core/cuda"]

[dependencies]
rag-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
tabled.workspace = true
indicatif.workspace = true
colored.workspace = true
chrono.workspace = true
