[package]
name = "rag-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
walkdir.workspace = true
ignore.workspace = true
which.workspace = true
fs2.workspace = true
pulldown-cmark.workspace = true
rusqlite.workspace = true
sqlite-vec.workspace = true
zerocopy.workspace = true
glob.workspace = true

candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
tokenizers.workspace = true
ureq.workspace = true
crossbeam-channel = "0.5"

[features]
default = []
# Apple Metal acceleration (macOS only). Builds with --features metal.
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
# NVIDIA CUDA acceleration (Linux + Windows with CUDA toolkit installed).
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dev-dependencies]
tempfile = "3.10"
filetime = "0.2"
