[package]
name = "recall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "recall"
path = "src/main.rs"

[dependencies]
kb-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
tiny_http.workspace = true

[dev-dependencies]
tempfile.workspace = true
